Added missing server

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lit": "^2.0.0-rc.4",
     "lit-element": "^3.0.0-rc.1",
     "tpe": "^1.x.x",
-    "tpe-material": "^1.x.x"
+    "tpe-material": "^1.x.x",
+    "es6-dev-server": "^0.0.10"
   },
   "author": "",
   "license": "ISC"
