small changes after tpe updates

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "tpe-demo",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@lit-labs/motion": "^1.0.0",
     "es6-dev-server": "0.0.10",
-    "lit": "^2.0.0-rc.4",
+    "lit": "^2.0.0",
     "lit-element": "^3.0.0-rc.1",
     "tpe": "^1.0.4",
     "tpe-material": "^1.0.4"
